	PR tree-optimization/37174 	* tree-vect-analyze.c (vect_get_and_check_slp_defs): Check that the 	def stmt is a part of the loop before accessing its stmt_vec_info.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@139508 138bc75d-0d04-0410-961f-82ee72b054a4